fix: height issue on iPhone

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,11 +20,10 @@ body {
     font-size: 17px;
 }
 
-.outer_div {
+.container {
     display: flex;
     flex-direction: column;
-    height: 100svh;
-    height: 100vh;
+    overflow: hidden;
 }
 
 .footer {
